<resources>
    <string name="ak_pull_to_refresh_pull_label">下拉同步最新</string>
    <string name="ak_pull_to_refresh_release_label">松开同步</string>
    <string name="ak_pull_to_refresh_tap_label">点击刷新&#8230;</string>
    <string name="ak_pull_to_refresh_refreshing_label">正在同步</string>
    <string name="ak_pull_to_refresh_time_label">上次更新于</string>
    <string name="tag_important">重要</string>
    <string name="tag_todo">待办</string>
    <string name="tag_goodsoft">好用的软件</string>
    <string name="firstnote_title">从今天起，告别总是满世界找东西的日子</string>
    <string name="firstnote_tag">重要,好用的软件</string>
    <string name="logging_in">正在登录……</string>
    <string name="registering">正在注册……</string>
    <string name="getingcontent">正在获取笔记……</string>
    <string name="in_progress">正在处理……</string>
    <string name="getingBindingList">正在获取第三方账号列表……</string>
    <string name="unbinding">正在解除授权关系……</string>
    <string name="uploadingComment">正在上传评论……</string>
    <string name="downloadComment">正在下载评论……</string>
    <string name="note_saveing">正在保存笔记……</string>
    <string name="finish">完成</string>
    <string name="send">发送</string>
    <string name="click_back_again_exit">再按一次退出</string>
    <string name="app_name">轻笔记</string>
    <string name="app_name2">&#160;轻笔记 - 创建笔记</string>
    <string name="contentDescription">contentDescription</string>
    <string name="login_username">请输入账户名</string>
    <string name="login_password">请输入密码</string>
    <string name="login_login">登录</string>
    <string name="login_remember_password">记住密码</string>
    <string name="login_forget_password">忘记密码？</string>
    <string name="login_menu_about">关于…</string>
    <string name="login_menu_register">注册</string>
    <string name="login_newuser">我要注册</string>
    <string name="login_trial">继续体验</string>
    <string name="login_threeId">第三方账号登录</string>
    <string name="login_baidu">百度账号登录-获15G空间</string>
    <string name="dialog_forgetpwd_msg">输入您的用户名或邮箱</string>
    <string name="dialog_forgetpwd_edittext_hint">用户名/邮箱</string>
    <string name="dialog_setInviteCode_msg">让您的朋友增加空间\n填写他/她的邀请码</string>
    <string name="dialog_setInviteCode_edittext_hint">邀请码</string>
    <string name="reg_username">用户名</string>
    <string name="reg_email">邮箱</string>
    <string name="reg_password">密码</string>
    <string name="reg_confirm_password">确认密码</string>
    <string name="reg_show_password">显示密码</string>
    <string name="reg_register">注册</string>
    <string name="reg_complete">完成</string>
    <string name="reg_invite_code">邀请码(选填)</string>
    <string name="pulltorefresh_listview_down_sync">下拉同步</string>
    <string name="pulltorefresh_listview_up_sync">松开同步</string>
    <string name="pulltorefresh_listview_syncing">正在同步…</string>
    <string name="pulltorefresh_listview_sync_time">最近同步:</string>
    <string name="maincats_allnote">全部笔记</string>
    <string name="maincats_used_format" formatted="false">已用%.2f兆</string>
    <string name="maincats_total_format" formatted="false">总共%.2f兆</string>
    <string name="maincats_space_hint">点击同步，刷新使用空间</string>
    <string name="maincats_menu_feedback">意见反馈</string>
    <string name="maincats_menu_invite">邀请朋友</string>
    <string name="maincats_menu_tagcloud">标签云</string>
    <string name="maincats_menu_search">搜索</string>
    <string name="maincats_menu_syncall">完全同步</string>
    <string name="maincats_menu_logout">注销</string>
    <string name="maincats_menu_settings">设置</string>
    <string name="maincats_menu_catsort">排序</string>
    <string name="maincats_menu_about">关于</string>
    <string name="maincats_menu_help">帮助</string>
    <string name="search_word_hint">请输入搜索关键字</string>
    <string name="search_hint_project_title">群组笔记搜索</string>
    <string name="search_hint_personal_title">个人笔记搜索</string>
    <string name="search_hint_project_msg">对本地当前群组所有笔记的标题和正文进行搜索。</string>
    <string name="search_hint_personal_msg">对本地个人所有笔记的标题和正文进行搜索。</string>
    <string name="netsearch_id">输入群组ID进行精确搜索</string>
    <string name="netsearch_name">请输入关键字搜索群组</string>
    <string name="netsearch_id_hint">请输入群组ID</string>
    <string name="netsearch_name_hint">请输入群组名称</string>
    <string name="folder_menu_view">查看笔记</string>
    <string name="folder_menu_sync">同步该文件夹</string>
    <string name="folder_menu_rename">重命名</string>
    <string name="folder_menu_moveto">移动到文件夹</string>
    <string name="folder_menu_setdefault">设为默认文件夹</string>
    <string name="folder_menu_info">属性</string>
    <string name="folder_menu_delete">删除</string>
    <string name="folder_menu_cancel">取消</string>
    <string name="folder_menu_recycle">清空回收站</string>
    <string name="catlist_menu_default">默认排序</string>
    <string name="catlist_menu_createtime">按创建时间排序</string>
    <string name="catlist_menu_name">按文件夹名称排序</string>
    <string name="tag_menu_display">查看笔记</string>
    <string name="tag_menu_info">属性</string>
    <string name="tag_menu_delete">删除</string>
    <string name="tag_menu_cancel">取消</string>
    <string name="taglist_select">选择标签</string>
    <string name="folderlist_select">选择文件夹</string>
    <string name="updatelog_menu_setallreaded">全部设置为已读</string>
    <string name="notelist_allnote">全部笔记</string>
    <string name="notelist_recycler">回收站</string>
    <string name="notelist_today">今天</string>
    <string name="notelist_yestoday">昨天</string>
    <string name="notelist_sformat" formatted="false">%s %02d点%02d分</string>
    <string name="notelist_mformat" formatted="false">%2d月%d日 %s</string>
    <string name="notelist_lformat" formatted="false">%d年%d月%d日</string>
    <string name="notelist_mmformat" formatted="false">%d年%d月</string>
    <string name="recycler_menu_restore">还原</string>
    <string name="recycler_menu_view">查看</string>
    <string name="recycler_menu_delete">彻底删除</string>
    <string name="recycler_menu_cancel">取消</string>
    <string name="notelist_gettinglist">正在获取列表……</string>
    <string name="notelist_search_result">搜索结果</string>
    <string name="notelist_menu_updatetime">按更新时间排序</string>
    <string name="notelist_menu_createtime">按创建时间排序</string>
    <string name="notelist_menu_title">按标题排序</string>
    <string name="notelist_menu_clear_recycle">清空回收站</string>
    <string name="notelist_menu_cancel">取消</string>
    <string name="notelistitem_menu_view">查看</string>
    <string name="notelistitem_menu_edit">编辑</string>
    <string name="notelistitem_menu_sync">完全同步</string>
    <string name="notelistitem_menu_delete">删除</string>
    <string name="notelistitem_menu_moveto">移动到文件夹</string>
    <string name="notelistitem_menu_changetag">更换标签</string>
    <string name="notelistitem_menu_share">分享</string>
    <string name="notelistitem_menu_public_open">公开笔记</string>
    <string name="notelistitem_menu_public_close">取消公开</string>
    <string name="notelistitem_menu_info">属性</string>
    <string name="notelistitem_menu_cancel">取消</string>
    <string name="sharenotes_comment_count" formatted="false">评论(%d)</string>
    <string name="sharenotes_copy_count" formatted="false">收藏(%d)</string>
    <string name="sharenotes_source" formatted="false">来源于:%s</string>
    <string name="noteedit_title">未命名</string>
    <string name="noteedit_tag">输入标签（用逗号分隔）</string>
    <string name="noteedit_content">您此刻的想法、心情</string>
    <string name="noteedit_richtext">此笔记包含富文本内容。不能修改原有内容，只能追加内容。</string>
    <string name="attedit_menu_delete">删除</string>
    <string name="attedit_menu_cancel">取消</string>
    <string name="attedit_menu_camera">拍照</string>
    <string name="attedit_menu_audio">录音</string>
    <string name="attedit_menu_photo">照片</string>
    <string name="attedit_menu_file">文件</string>
    <string name="noteedit_menu_audioinput">语音输入</string>
    <string name="noteedit_wordcount" formatted="false">%d字</string>
    <string name="noteedit_current_time" formatted="false">%d年%d月%d日%02d:%02d:%02d</string>
    <string name="noteedit_btnname_camera">拍照</string>
    <string name="noteedit_btnname_record">录音</string>
    <string name="noteedit_btnname_doodle">涂鸦</string>
    <string name="noteedit_btnname_speakinput">语音转文字</string>
    <string name="noteedit_btnname_other">其他</string>
    <string name="noteedit_record_start">继续</string>
    <string name="noteedit_record_pause">暂停</string>
    <string name="noteedit_record_stop">停止</string>
    <string name="noteedit_record_time" formatted="false">%s:%s</string>
    <string name="noteedit_speeking">正在听...</string>
    <string name="noteedit_speek_start">继续</string>
    <string name="noteedit_speek_error">不可用</string>
    <string name="noteedit_speek_end">关闭</string>
    <string name="noteedit_popomenu_folders">选择文件夹</string>
    <string name="noteedit_popomenu_picture">添加相片</string>
    <string name="noteedit_popomenu_tag">选择标签</string>
    <string name="noteedit_popomenu_addatt">添加附件</string>
    <string name="noteedit_popomenu_insertcurrenttime">插入当前时间</string>
    <string name="noteedit_popomenu_lookatt">查看附件</string>
    <string name="noteedit_popomenu_deleteatt">删除附件</string>
    <string name="noteview_detail">详细信息</string>
    <string name="noteview_menu_email">邮件分享</string>
    <string name="noteview_menu_sync">单篇同步</string>
    <string name="noteview_menu_home">返回主页</string>
    <string name="noteview_menu_selecttext">选择文本</string>
    <string name="noteview_menu_read">语音朗读</string>
    <string name="noteview_menu_weibo">微博分享</string>
    <string name="noteview_share_from">\r\n来自轻笔记</string>
    <string name="weibo_hint">输入微博内容</string>
    <string name="noteview_menu_sina">新浪微博分享</string>
    <string name="noteview_menu_shareto_sms">分享到短信</string>
    <string name="noteview_menu_shareto_wx">分享到微信好友</string>
    <string name="noteview_menu_shareto_wxcycle">分享到朋友圈</string>
    <string name="noteview_menu_shareto_qq">分享到QQ好友</string>
    <string name="noteview_menu_shareto_qqcycle">分享到QQ空间</string>
    <string name="noteview_menu_text">其他方式分享</string>
    <string name="noteview_actionitem_share">分享笔记</string>
    <string name="noteview_actionitem_tag">更换标签</string>
    <string name="noteview_actionitem_comment">发表评论</string>
    <string name="noteview_actionitem_selecttext">选择文本</string>
    <string name="noteview_actionitem_move">更换文件夹</string>
    <string name="noteview_actionitem_collection">收藏到个人</string>
    <string name="noteview_actionitem_publicopen">公开笔记</string>
    <string name="noteview_actionitem_publicclose">取消公开</string>
    <string name="noteview_actionitem_attribute">查看属性</string>
    <string name="noteview_actionitem_delete">删除</string>
    <string name="noteview_editext_comment_hint">写评论</string>
    <string name="openatt_menu_view">查看</string>
    <string name="openatt_menu_save">保存</string>
    <string name="openatt_menu_send">发送</string>
    <string name="openatt_menu_cancel">取消</string>
    <string name="read_menu_restart">从头开始朗读</string>
    <string name="read_menu_continue">继续朗读</string>
    <string name="userinfo_userinfo">用户信息</string>
    <string name="userinfo_userinfo_child">用户名、密码、邮箱等信息</string>
    <string name="userinfo_username">用户名</string>
    <string name="userinfo_phone">手机号</string>
    <string name="userinfo_password">密码</string>
    <string name="userinfo_email">邮箱</string>
    <string name="userinfo_verifyemail">验证您的邮箱</string>
    <string name="userinfo_settings">个性化设置</string>
    <string name="userinfo_settings_child">默认文件夹、密码锁</string>
    <string name="userinfo_about">关于我们</string>
    <string name="userinfo_about_child">意见反馈、版本信息等</string>
    <string name="userinfo_spaceinfo">存储空间</string>
    <string name="userinfo_spaceinfo_child">云空间大小</string>
    <string name="userinfo_update">检查更新</string>
    <string name="userinfo_pay">请支持我们一下！</string>
    <string name="catinfo_name">名称</string>
    <string name="catinfo_notecount">笔记数量</string>
    <string name="catinfo_isdefault">默认文件夹</string>
    <string name="catinfo_delete">删除</string>
    <string name="catinfo_setdefault">设置为默认文件夹</string>
    <string name="catinfo_group">所属文件夹</string>
</resources>