<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/userinfo_page"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/page_bg"
    android:orientation="vertical">

    <!-- tool bar -->
    <FrameLayout
        android:id="@+id/userinfo_toolbar_layout"
        style="@style/toolbar">

        <TextView
            android:id="@+id/userinfo_back"
            style="@style/toolbar_back"
            android:text="设置" />

        <Button
            android:id="@+id/userinfo_logout"
            style="@style/button"
            android:layout_gravity="right"
            android:gravity="center"
            android:text="注销"
            android:textColor="#ffffffff"
            android:textSize="15sp" />

    </FrameLayout>

    <!-- 更新 -->
    <LinearLayout
        android:id="@+id/ly_update"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/preference_child_bg_normal"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="@string/userinfo_update"
                android:textColor="#ff000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ff707070"
                android:textSize="14sp" />

        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dip"
            android:contentDescription="@string/contentDescription"
            android:src="@drawable/arrows" />
    </LinearLayout>

    <!-- 用户 -->
    <LinearLayout
        android:id="@+id/ly_user"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/preference_child_bg_normal"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="@string/userinfo_userinfo"
                android:textColor="#ff000000"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/userinfo_userinfo_child"
                android:textColor="#ff707070"
                android:textSize="14sp" />

        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dip"
            android:contentDescription="@string/contentDescription"
            android:src="@drawable/arrows" />
    </LinearLayout>

    <!-- 设置 -->
    <LinearLayout
        android:id="@+id/ly_set"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/preference_child_bg_normal"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="@string/userinfo_settings"
                android:textColor="#ff000000"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/userinfo_settings_child"
                android:textColor="#ff707070"
                android:textSize="14sp" />

        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dip"
            android:contentDescription="@string/contentDescription"
            android:src="@drawable/arrows" />
    </LinearLayout>

    <!-- 设置 -->
    <LinearLayout
        android:id="@+id/ly_about"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/preference_child_bg_normal"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="@string/userinfo_about"
                android:textColor="#ff000000"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/userinfo_about_child"
                android:textColor="#ff707070"
                android:textSize="14sp" />

        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dip"
            android:contentDescription="@string/contentDescription"
            android:src="@drawable/arrows" />
    </LinearLayout>
    <!-- 设置 -->
    <LinearLayout
        android:id="@+id/ly_space"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/preference_child_bg_normal"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="@string/userinfo_spaceinfo"
                android:textColor="#ff000000"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/userinfo_spaceinfo_child"
                android:textColor="#ff707070"
                android:textSize="14sp" />

        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dip"
            android:contentDescription="@string/contentDescription"
            android:src="@drawable/arrows" />
    </LinearLayout>

    <!-- 打赏 -->
    <LinearLayout
        android:id="@+id/ly_pay"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/preference_child_bg_normal"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/child_logo"
            android:contentDescription="@null"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:src="@drawable/pay_tip" />

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/child_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="@string/userinfo_pay"
                android:textColor="#ff000000"
                android:textSize="18sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/child_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dip"
            android:contentDescription="@string/contentDescription"
            android:src="@drawable/arrows" />
    </LinearLayout>
</LinearLayout>