<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/catinfo_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/page_bg"
    android:orientation="vertical">

    <!-- tool bar -->

    <FrameLayout
        android:id="@+id/catinfo_toolbar_layout"
        style="@style/toolbar">

        <TextView
            android:id="@+id/catinfo_back"
            style="@style/toolbar_back"
            android:text="文件夹" />

    </FrameLayout>
    <!-- 分组-->
    <TextView
        android:id="@+id/tv_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/preference_group_bg"
        android:gravity="center_vertical"
        android:paddingLeft="15dp"
        android:text="文件夹"
        android:textColor="#ff626262"
        android:textSize="14sp" />

    <LinearLayout
        android:id="@+id/ly_cat"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/preference_child_bg_normal"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="@string/catinfo_name"
                android:textColor="#ff000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_cat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ff707070"
                android:textSize="14sp" />

        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dip"
            android:contentDescription="@string/contentDescription"
            android:src="@drawable/arrows" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ly_catGroup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/preference_child_bg_normal"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="@string/catinfo_group"
                android:textColor="#ff000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_catGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ff707070"
                android:textSize="14sp" />

        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dip"
            android:contentDescription="@string/contentDescription"
            android:src="@drawable/arrows" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ly_note"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/preference_child_bg_normal"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="@string/catinfo_notecount"
                android:textColor="#ff000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_note"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ff707070"
                android:textSize="14sp" />

        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dip"
            android:contentDescription="@string/contentDescription"
            android:src="@drawable/arrows"
            android:visibility="invisible" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ly_default"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/preference_child_bg_normal"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="@string/catinfo_isdefault"
                android:textColor="#ff000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_default"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ff707070"
                android:textSize="14sp" />

        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dip"
            android:contentDescription="@string/contentDescription"
            android:src="@drawable/arrows"
            android:visibility="invisible" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ly_delete"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/preference_child_bg_normal"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="@string/catinfo_delete"
                android:textColor="#ff000000"
                android:textSize="18sp" />

        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dip"
            android:contentDescription="@string/contentDescription"
            android:src="@drawable/arrows" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ly_setDefault"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/preference_child_bg_normal"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="@string/catinfo_setdefault"
                android:textColor="#ff000000"
                android:textSize="18sp" />

        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dip"
            android:contentDescription="@string/contentDescription"
            android:src="@drawable/arrows" />
    </LinearLayout>


</LinearLayout>